--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,8 +110,17 @@ Search Box
   height:25px;
 }
 
+.searchBox input[type="text"]{
+  border-width:0;
+  padding-right:75px;
+}
+
+.closeWrapper {
+  width:15px;
+  margin-left:-75px;
+}
+
 .searchResult {
-  background-color:#ffffff;
   width:60px;
   font-size:12px;
   color:#8c8c8c;
